fix css spacing and hook up buttons to clear much better

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,8 +41,6 @@ img {
 .mainContain{
     display:flex;
     justify-content: center;
-    margin-top: 0;
-    margin-bottom: 6em;
 }
 
 .wrapper {
@@ -243,7 +241,7 @@ button , #purchase, #process {
 
 input {
     font-size: .5em;
-    margin-left: 2em; 
+    margin-left: 2em;
     width: 12em;
 }
 
@@ -308,4 +306,8 @@ label {
 
 .spacer {
   height: 100px;
+}
+
+.reciept, .process, .payment, .credit, .cash, .cart {
+  display: none;
 }
